# aasdk

./: .dockerignore  .gitattributes  .gitignore  .yamllint  BUILD.md  BUILD_DOCKER.md  BUILD_STATUS_ANALYSIS.md  C++20_PEDANTIC_FIX.md  CHANGELOG_SSL_CERT.md  CMakeLists.txt  CPP20_MODERNIZATION.md  Config.cmake.in  DEVCONTAINER.md  DOCUMENTATION_COMPLETION_SUMMARY.md  Dockerfile  Doxyfile  MODERN_LOGGER.md  PACKAGING.md  Readme.md  build-wsl.sh  build.sh  docker-build.sh  docker-compose.yml  test-build-system.sh  test-cmake-config.sh
.devcontainer/: Dockerfile  Dockerfile.arm64  Dockerfile.armhf  Dockerfile.x64  README.md  devcontainer-arm64.json  devcontainer-armhf.json  devcontainer.json  docker-compose.yml  post-create.sh
.github/scripts/docs/: generate_wiki_docs.sh
.github/workflows/: apt-publish-aptly.yml  apt-publish-clean.yml  apt-publish.yml  apt-publish.yml.disabled  auto-wiki-docs.yml  build_compile.yml  build_native.yml  ci.yml  protobuf-build.yml  release.yml  trigger-apt-publish.yml
aap_protobuf/: Config.cmake.in
aap_protobuf/protobuf/: CMakeLists.txt
aasdk_proto/: ChannelDescriptorData.proto  PingRequestMessage.proto  VideoFPSEnum.proto  VideoFocusRequestMessage.proto  WifiSecurityRequestMessage.proto
buildenv/: Dockerfile  cross-compile.md  docker-compose.yml  entrypoint.sh  patch-libboost-log-deb.sh
buildenv/release/: .gitignore
cmake_modules/: DebPackageFilename.cmake  ExternalGtest.cmake  gitversion.cmake
debian/: postinst
docs/doxybook/: config.json
include/aasdk/: Version.hpp  Version.hpp.in
include/aasdk/Channel/: Channel.hpp  IChannel.hpp  Promise.hpp
include/aasdk/Channel/Bluetooth/: BluetoothService.hpp  IBluetoothService.hpp  IBluetoothServiceEventHandler.hpp
include/aasdk/Channel/Control/: ControlServiceChannel.hpp  IControlServiceChannel.hpp  IControlServiceChannelEventHandler.hpp
include/aasdk/Channel/GenericNotification/: GenericNotificationService.hpp  IGenericNotificationService.hpp  IGenericNotificationServiceEventHandler.hpp
include/aasdk/Channel/InputSource/: IInputSourceService.hpp  IInputSourceServiceEventHandler.hpp  InputSourceService.hpp
include/aasdk/Channel/MediaBrowser/: IMediaBrowserService.hpp  IMediaBrowserServiceEventHandler.hpp  MediaBrowserService.hpp
include/aasdk/Channel/MediaPlaybackStatus/: IMediaPlaybackStatusService.hpp  IMediaPlaybackStatusServiceEventHandler.hpp  MediaPlaybackStatusService.hpp
include/aasdk/Channel/MediaSource/: IMediaSourceService.hpp  IMediaSourceServiceEventHandler.hpp  (+1 more)
include/aasdk/Common/: Data.hpp  Log.hpp  ModernLogger.hpp
include/aasdk/Error/: Error.hpp  ErrorCode.hpp
include/aasdk/IO/: IOContextWrapper.hpp  Promise.hpp  PromiseLink.hpp
include/aasdk/Messenger/: ChannelId.hpp  ChannelReceiveMessageQueue.hpp  ChannelReceivePromiseQueue.hpp  Cryptor.hpp  EncryptionType.hpp  FrameHeader.hpp  FrameSize.hpp  FrameSizeType.hpp  FrameType.hpp  ICryptor.hpp  IMessageInStream.hpp  IMessageOutStream.hpp  IMessenger.hpp  Message.hpp  MessageId.hpp  MessageInStream.hpp  MessageOutStream.hpp  MessageType.hpp  Messenger.hpp  Promise.hpp  ServiceId.hpp  Timestamp.hpp
include/aasdk/TCP/: ITCPEndpoint.hpp  ITCPWrapper.hpp  TCPEndpoint.hpp  TCPWrapper.hpp
include/aasdk/Transport/: DataSink.hpp  ISSLWrapper.hpp  ITransport.hpp  SSLWrapper.hpp  TCPTransport.hpp  Transport.hpp  USBTransport.hpp
include/aasdk/USB/: AOAPDevice.hpp  AccessoryModeProtocolVersionQuery.hpp  AccessoryModeQuery.hpp  AccessoryModeQueryChain.hpp  AccessoryModeQueryChainFactory.hpp  AccessoryModeQueryFactory.hpp  AccessoryModeQueryType.hpp  AccessoryModeSendStringQuery.hpp  AccessoryModeSendStringType.hpp  AccessoryModeStartQuery.hpp  ConnectedAccessoriesEnumerator.hpp  IAOAPDevice.hpp  IAccessoryModeQuery.hpp  IAccessoryModeQueryChain.hpp  IAccessoryModeQueryChainFactory.hpp  IAccessoryModeQueryFactory.hpp  IConnectedAccessoriesEnumerator.hpp  IUSBEndpoint.hpp  IUSBHub.hpp  IUSBWrapper.hpp  USBEndpoint.hpp  USBHub.hpp  USBWrapper.hpp
protobuf/: CMakeLists.txt
protobuf/aap_protobuf/service/: Service.proto
src/Channel/: Channel.cpp
src/Channel/Bluetooth/: BluetoothService.cpp
src/Channel/Control/: ControlServiceChannel.cpp
src/Channel/GenericNotification/: GenericNotification.cpp
src/Channel/InputSource/: InputSourceService.cpp
src/Channel/MediaBrowser/: MediaBrowserService.cpp
src/Channel/MediaPlaybackStatus/: MediaPlaybackStatusService.cpp
src/Channel/MediaSource/: MediaSourceService.cpp
src/Channel/NavigationStatus/: NavigationStatusService.cpp
src/Channel/PhoneStatus/: PhoneStatusService.cpp
src/Channel/Radio/: RadioService.cpp
src/Channel/SensorSource/: SensorSourceService.cpp
src/Channel/VendorExtension/: VendorExtensionService.cpp
src/Channel/WIFI/: WIFIServiceChannel.cpp
src/Channel/WifiProjection/: WifiProjectionService.cpp
src/Common/: Data.cpp  ModernLogger.cpp
src/Error/: Error.cpp
src/IO/: IOContextWrapper.cpp
src/Messenger/: ChannelId.cpp  ChannelReceiveMessageQueue.cpp  ChannelReceivePromiseQueue.cpp  Cryptor.cpp  FrameHeader.cpp  FrameSize.cpp  FrameType.cpp  Message.cpp  MessageId.cpp  MessageInStream.cpp  MessageInStream.ut.cpp  MessageOutStream.cpp  MessageOutStream.ut.cpp  Messenger.cpp  Messenger.ut.cpp  ServiceId.cpp  Timestamp.cpp
src/TCP/: TCPEndpoint.cpp  TCPEndpoint.ut.cpp  TCPWrapper.cpp
src/Transport/: DataSink.cpp  SSLWrapper.cpp  TCPTransport.cpp  TCPTransport.ut.cpp  Transport.cpp  USBTransport.cpp  USBTransport.ut.cpp
src/USB/: AOAPDevice.cpp  AOAPDevice.ut.cpp  AccessoryModeProtocolVersionQuery.cpp  AccessoryModeProtocolVersionQuery.ut.cpp  AccessoryModeQuery.cpp  AccessoryModeQueryChain.cpp  AccessoryModeQueryChain.ut.cpp  AccessoryModeQueryChainFactory.cpp  AccessoryModeQueryFactory.cpp  AccessoryModeSendStringQuery.cpp  AccessoryModeSendStringQuery.ut.cpp  AccessoryModeStartQuery.cpp  AccessoryModeStartQuery.ut.cpp  ConnectedAccessoriesEnumerator.cpp  ConnectedAccessoriesEnumerator.ut.cpp  USBEndpoint.cpp  USBEndpoint.ut.cpp  USBHub.cpp  USBHub.ut.cpp  USBWrapper.cpp
unit_test/Messenger/UT/: Cryptor.mock.hpp
(+45 files in other folders)
